// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTypographyFromTheme should return the requested typography from theme 1`] = `
Array [
  "
    ",
  "
  color: ",
  "#000000",
  ";
  font-weight: ",
  "400",
  ";
  font-size: ",
  "16px",
  ";
  letter-spacing: ",
  "inherit",
  ";
  line-height: ",
  "22px",
  ";
  margin-bottom: ",
  "20px",
  ";
",
  "
    ",
  [Function],
  "
  ",
]
`;

exports[`mapToBreakpoints should return a style with 3 breakpoints and corresponding values 1`] = `
Array [
  "
    ",
  "width: 100px;
        @media screen and (min-width: 375px) {
          width: 70px;
        }
      
        @media screen and (min-width: 414px) {
          width: 50px;
        }
      ",
  "
  ",
]
`;

exports[`mapToBreakpoints should return a style with 3 breakpoints and corresponding values 2`] = `
Array [
  "
    ",
  "flex-basis: 500px;
        @media screen and (min-width: 375px) {
          flex-basis: 600px;
        }
      
        @media screen and (min-width: 414px) {
          flex-basis: 200px;
        }
      ",
  "
  ",
]
`;

exports[`mapToBreakpoints should return only return the possible results if the limit has reached 1`] = `
Array [
  "
    ",
  "width: 100px;
        @media screen and (min-width: 375px) {
          width: 70px;
        }
      
        @media screen and (min-width: 414px) {
          width: 50px;
        }
      
        @media screen and (min-width: 540px) {
          width: 100px;
        }
      
        @media screen and (min-width: 768px) {
          width: 70px;
        }
      
        @media screen and (min-width: 1024px) {
          width: 50px;
        }
      
        @media screen and (min-width: 1200px) {
          width: 100px;
        }
      
        @media screen and (min-width: 1430px) {
          width: 70px;
        }
      
        @media screen and (min-width: 1920px) {
          width: 50px;
        }
      
        @media screen and (min-width: 2560px) {
          width: 50px;
        }
      ",
  "
  ",
]
`;
